# mkd-tools

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml  test-windows.yml
apps/: CMakeLists.txt
apps/monokakido-receipt-ui/: AppDelegate.swift  AppMain.swift  CMakeLists.txt  Info.plist  MKDReceipt.entitlements  MKDReceiptBridge.h  MKDReceiptBridge.mm
cli/src/: cli.cpp  commands.cpp
include/MKD/: mkd.hpp
include/MKD/dictionary/: dictionary.hpp  dictionary_product.hpp  metadata.hpp  paths.hpp
include/MKD/output/: export_accumulator.hpp  keystore_exporter.hpp  resource_exporter.hpp
include/MKD/platform/: binary_file_reader.hpp  mmap_file.hpp  parallel.hpp  platform.hpp
include/MKD/platform/macos/: bookmark_store.hpp  folder_prompt.hpp  fs.hpp  macos_dictionary_source.hpp  monokakido_receipt.hpp  scoped_security_access.hpp
include/MKD/resource/: common.hpp  entry_id.hpp  font.hpp  headline_record.hpp  headline_store.hpp  keystore.hpp  owned_span.hpp  resource_loader.hpp  resource_type.hpp  zlib_decompressor.hpp
include/MKD/resource/headline/: headline_record.hpp
include/MKD/resource/keystore/: keystore.hpp  page_reference.hpp
include/MKD/resource/nrsc/: nrsc.hpp  nrsc_data.hpp  nrsc_index.hpp
include/MKD/resource/rsc/: rsc.hpp  rsc_crypto.hpp  rsc_data.hpp  rsc_index.hpp  rsc_index_record.hpp  rsc_map.hpp
include/monokakido/core/platform/: fs.hpp  scoped_security_access.hpp
include/monokakido/dictionary/: catalog.hpp  common.hpp  dictionary.hpp  metadata.hpp  paths.hpp
include/monokakido/output/: common.hpp  export_options.hpp  exporter.hpp  resource_exporter.hpp
include/monokakido/platform/: dictionary_source.hpp  directory_dictionary_source.hpp  fs.hpp
include/monokakido/platform/macos/: fs.hpp  macos_dictionary_source.hpp  scoped_security_access.hpp
include/monokakido/resource/: common.hpp  export_options.hpp  exporter.hpp  resource_loader.hpp  xml_view.hpp  zlib_decompressor.hpp
include/monokakido/resource/keystore/: keystore.hpp  keystore_lookup_result.hpp  page_reference.hpp
include/monokakido/resource/nrsc/: nrsc.hpp  nrsc_data.hpp  nrsc_index.hpp  nrsc_index_record.hpp
include/monokakido/resource/rsc/: rsc.hpp  rsc_crypto.hpp  rsc_data.hpp  rsc_decryptor.hpp  rsc_index.hpp  rsc_index_record.hpp  rsc_keystore.hpp  rsc_map.hpp
src/: main.cpp
src/core/platform/: fs.mm  scoped_security_access.mm
src/dictionary/: catalog.cpp  dictionary.cpp  dictionary_product.cpp  dictionary_search.hpp  metadata.cpp  paths.cpp
src/output/: base_exporter.cpp  export_accumulator.cpp  headline_exporter.cpp  keystore_exporter.cpp  resource_exporter.cpp
src/platform/: binary_file_reader.cpp  binary_file_reader.hpp  directory_dictionary_source.cpp  fs.cpp  mmap_file.cpp  mmap_file.hpp  parallel.cpp
src/platform/macos/: bookmark_store.mm  folder_prompt.mm  fs.mm  macos_dictionary_source.cpp  monokakido_receipt.cpp  parallel.mm  scoped_security_access.mm
src/resource/: common.cpp  font.cpp  resource_loader.cpp  xml_view.cpp  zlib_decompressor.cpp  zlib_stream.cpp  zlib_stream.hpp
src/resource/detail/: binary_buffer.cpp  binary_buffer.hpp
src/resource/detail/unicode/: unicode_data.hpp
src/resource/headlines/: headline_store.cpp
src/resource/keystore/: entry_id.cpp  keystore.cpp  keystore_compare.cpp  keystore_search.cpp  keystore_search.hpp  keystore_writer.cpp  keystore_writer.hpp  page_reference.cpp
src/resource/nrsc/: named_resource_store_contents.cpp  named_resource_store_contents.hpp  named_resource_store_contents_fileio.cpp  named_resource_store_contents_mmap.cpp  named_resource_store_index.cpp  named_resource_store_index.hpp  named_resource_store_index_record.cpp  named_resource_store_index_record.hpp  named_resource_store_writer.cpp  named_resource_store_writer.hpp  nrsc.cpp  nrsc_data.cpp  nrsc_data_fileio.cpp  nrsc_data_mmap.cpp  nrsc_index.cpp  nrsc_index_record.cpp  nrsc_index_record.hpp
src/resource/rsc/: resource_store_contents.cpp  resource_store_contents.hpp  resource_store_contents_fileio.cpp  resource_store_index.cpp  resource_store_index.hpp  resource_store_index_record.cpp  resource_store_index_record.hpp  resource_store_map.hpp  resource_store_writer.cpp  resource_store_writer.hpp  rsc.cpp  rsc_crypto.cpp  rsc_data.cpp  rsc_data_fileio.cpp  rsc_data_mmap.cpp  rsc_decryptor.cpp  rsc_index.cpp  rsc_index_record.cpp  rsc_keystore.cpp  rsc_map.cpp
test/: common.hpp  main.cpp  test_listener.hpp
test/crypto/: test_encrypt.cpp  test_entry.xml
test/headline/: headline_test.cpp
test/keystore/: test_keystore.cpp  test_keystore_search.cpp
test/nrsc/: test_nrsc_index.cpp
test/rsc/: test_rsc_data.cpp  test_rsc_index.cpp
test/test-data/TESTDICT/: ContentInfo.plist
test/test-data/TESTDICT/Contents/: TESTDICT.json
test/test-data/TESTDICT/Contents/TESTDICT/contents/: contents-0001.rsc  contents.map
test/zlib/: zlib_stream_test.cpp
